chore: update project configuration and formatting rules
- Add new ignore patterns to .prettierignore and .gitignore
- Update editorconfig to use 2-space indentation
- Add PHP support to prettier configuration
- Refactor eslint config to follow Standard Style
- Update package.json scripts and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 /public/storage
 /storage/*.key
 /storage/pail
+/backups
 /vendor
+/docs
 .env
 .env.backup
 .env.production
@@ -22,3 +24,4 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+/.trae
