--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,7 @@
 resources/js/components/ui/*
 resources/js/ziggy.js
 resources/views/mail/*
+storage/framework/**
+bootstrap/cache/**
+vendor/**
+*.blade.php
