--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.4",
-        "maxidev/tail-logger": "^1.0"
+        "maxidev/tail-logger": "^1.0",
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
