--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.0.1",
+    "dayjs": "^1.11.13",
     "globals": "^15.14.0",
     "laravel-vite-plugin": "^2.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
