--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "php": "^8.2",
     "inertiajs/inertia-laravel": "^2.0",
     "laravel/framework": "^12.0",
+    "laravel/slack-notification-channel": "^3.6",
     "laravel/tinker": "^2.10.1",
     "maxidev/tail-logger": "^1.0",
     "tightenco/ziggy": "^2.4"
@@ -38,7 +39,8 @@
       "Tests\\": "tests/"
     },
     "files": [
-      "app/Helpers/device_helper.php"
+      "app/Helpers/device_helper.php",
+      "app/Helpers/session_helper.php"
     ]
   },
   "scripts": {
