feat(helpers): add table helper for sorting data extraction
Add new helper function to extract column and direction from table sorting string. The function ensures consistent direction format (asc/desc) regardless of input case.

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     },
     "files": [
       "app/Helpers/device_helper.php",
-      "app/Helpers/session_helper.php"
+      "app/Helpers/session_helper.php",
+      "app/Helpers/table_helper.php"
     ]
   },
   "scripts": {
