--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "globals": "^15.14.0",
+    "immer": "^10.1.3",
     "is-ip": "^5.0.1",
     "laravel-vite-plugin": "^2.0",
     "lucide-react": "^0.475.0",
@@ -72,6 +73,7 @@
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.43.1",
     "typescript": "^5.7.2",
+    "uuid": "^13.0.0",
     "vite": "^7.0.4"
   },
   "optionalDependencies": {
