--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "rollup-plugin-visualizer": "^6.0.3",
@@ -29,6 +29,7 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.2",
     "@headlessui/react": "^2.2.0",
     "@inertiajs/react": "^2.1.0",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -51,6 +52,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
+    "@uiw/react-codemirror": "^4.25.1",
     "@vitejs/plugin-react": "^4.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
