--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
   "require": {
     "php": "^8.2",
     "inertiajs/inertia-laravel": "^2.0",
-    "laravel/framework": "^12.0",
-    "laravel/tinker": "^2.10.1",
-    "maxidev/tail-logger": "^1.0",
-    "tightenco/ziggy": "^2.4",
     "jaybizzle/crawler-detect": "^1.3",
     "jenssegers/agent": "^2.6",
+    "laravel/framework": "^12.0",
     "laravel/slack-notification-channel": "^3.6",
-    "matomo/device-detector": "^6.4"
+    "laravel/tinker": "^2.10.1",
+    "matomo/device-detector": "^6.4",
+    "maxidev/tail-logger": "^1.0",
+    "spatie/laravel-slack-alerts": "^1.7",
+    "tightenco/ziggy": "^2.4"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
