--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-dom": "^19.0.2",
     "@uiw/react-codemirror": "^4.25.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
