feat(helpers): add error helper for exception stack handling
Introduce new helper function to extract error stack from exceptions with optional development details. The helper provides structured error information for better error reporting and debugging.

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "files": [
       "app/Helpers/device_helper.php",
       "app/Helpers/session_helper.php",
-      "app/Helpers/table_helper.php"
+      "app/Helpers/table_helper.php",
+      "app/Helpers/error_helper.php"
     ]
   },
   "scripts": {
