feat(build): add catalyst dev script and simplify vite config
Add new dev:catalyst script to run vite with catalyst config. Simplify vite config by using laravel-vite-plugin and removing redundant rollupOptions.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build:catalyst": "vite build --config vite.catalyst.config.js && php artisan catalyst:clear-cache",
     "build:ssr": "vite build && vite build --ssr",
     "dev": "vite",
+    "dev:catalyst": "vite --config vite.catalyst.config.js",
     "lint": "eslint . --fix",
     "types": "tsc --noEmit",
     "format": "prettier --write resources/",
