--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/slack-notification-channel": "^3.6",
     "laravel/tinker": "^2.10.1",
     "matomo/device-detector": "^6.4",
+    "matthiasmullie/minify": "^1.3",
     "maxidev/tail-logger": "^1.0",
     "spatie/laravel-slack-alerts": "^1.7",
     "tightenco/ziggy": "^2.4"
