--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@codemirror/lint": "^6.9.1",
     "@headlessui/react": "^2.2.0",
     "@inertiajs/react": "^2.1.0",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
