feat(offerwall): add twig template support for payload transformation
Add Twig dependency and implement payload transformation logic in MixService. This allows for more flexible payload formatting using Twig templates when integration requires custom transformation. The original payload processing is preserved as fallback.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "matthiasmullie/minify": "^1.3",
     "maxidev/tail-logger": "^1.0",
     "spatie/laravel-slack-alerts": "^1.7",
-    "tightenco/ziggy": "^2.4"
+    "tightenco/ziggy": "^2.4",
+    "twig/twig": "^3.22"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.16",
