--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.16",
     "fakerphp/faker": "^1.23",
+    "laravel/boost": "^1.1",
     "laravel/pail": "^1.2.2",
     "laravel/pint": "^1.18",
     "laravel/sail": "^1.41",
